--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="badge mb-2"><span class="icon mr-1"><span class="mai-globe"></span></span> #1 Sobat Belajarmu!</div>
           <h1 class="mb-4">Jadikan Belajarmu Menyenangkan!</h1>
           <p class="mb-4">Study Space merupakan sebuah platform online bagi siswa<br>
-          yang ingin merasakan sensasi belajar yang tidak membosankan.</p>
+          yang ingin belajar dengan metode yang tidak membosankan.</p>
           <a href="#" class="btn btn-primary rounded-pill">Get App Now</a>
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
